# financial-report

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/test_simple_md/: flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/get_cached_md_report/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/get_cached_pdf_report/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/get_cached_ticker_list/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/financial_report_analyzer/: __init__.py  task.oo.yaml
tasks/generate_md_report/: __init__.py  task.oo.yaml
tasks/generate_periods_markdown/: __init__.py  task.oo.yaml
tasks/generate_report_summary/: __init__.py  task.oo.yaml
tasks/get_cached_periods/: __init__.py  task.oo.yaml
tasks/get_cached_report/: __init__.py  task.oo.yaml
tasks/get_predefined_questions/: __init__.py  task.oo.yaml
tasks/md_to_pdf/: __init__.py  styles.py  task.oo.yaml
