[project]
name = "financial-report"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaysmavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "markdown (>=3.5,<4.0.0)",
    "weasyprint (>=61.0,<62.0.0)",
    "pygments (>=2.17,<3.0.0)",
    "pydyf (==0.10.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "financial_report", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
